--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,4 +4,5 @@
   <p>Price: <%= item.product.price %></p>
   <p>Quantity: <%= item.quantity %></p>
   <%= link_to 'Add one', product_order_item_path(item.product, item), method: :patch, class: 'btn btn-info' %>
+  <%= link_to 'Delete one', product_order_item_path(item.product, item), method: :delete, class: 'btn btn-danger'%>
 <% end %>
