--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,5 +8,10 @@
       <hr>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
+
+    <div class="mt-4">
+      <%= link_to 'Add to cart', product_order_items_path(product), method: :post, class: 'btn btn-success' %>
+    </div>
+
   </div>
 </div>
