--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,9 +8,15 @@
       <hr>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
+    <br>
+    <div> Product rating: <%= @product.rating %> </div>
 
     <div class="mt-4">
       <%= link_to 'Add to cart', product_order_items_path(product), method: :post, class: 'btn btn-success' %>
+    </div>
+
+    <div class="mt-4">
+      <%= link_to 'Add comment', new_comment_path(user: current_user, product: @product), method: :get, class: 'btn btn-primary' %>
     </div>
 
   </div>
