--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <div class="col-sm-3 col-12">
         <nav class="nav flex-column">
           <% Category.all.each do |category| %>
-            <%= link_to category.title, category_path(category), class: 'nav-link' %>
+            <%= link_to category.title, products_path(category_id: category.id), class: 'nav-link' %>
           <% end %>
           <!--<a class="nav-link active" aria-current="page" href="#">Active</a>
           <a class="nav-link" href="#">Link</a>
